[gd_scene load_steps=7 format=3 uid="uid://culf11cdnlk4d"]

[ext_resource type="Script" uid="uid://cdhmbawqh0f8g" path="res://global/MANAGER/GestorCombate.gd" id="1_lwkbu"]
[ext_resource type="PackedScene" uid="uid://clmqkhre1h0fq" path="res://Assets/Interfaz de usuario/UI PIXEL ART IA/IUCombate.tscn" id="2_5dstg"]
[ext_resource type="PackedScene" uid="uid://bgexp8vwp4imp" path="res://Mapas/plantillaCombate/PosicionEnemigos.tscn" id="3_osjme"]
[ext_resource type="PackedScene" uid="uid://dtut4bqfeu15q" path="res://Mapas/plantillaCombate/PlayerParty.tscn" id="4_yktg8"]
[ext_resource type="PackedScene" uid="uid://c32yyji1vo1wi" path="res://Mapas/plantillaCombate/EnemyGroup.tscn" id="5_r5kj3"]
[ext_resource type="Texture2D" uid="uid://cdxhhuw46lv1x" path="res://Assets/Texturas/mano.png" id="6_xs7id"]

[node name="GestorCombate" type="Node"]
script = ExtResource("1_lwkbu")

[node name="IuCombate" parent="." instance=ExtResource("2_5dstg")]

[node name="PosicionEnemigos" parent="." instance=ExtResource("3_osjme")]
position = Vector2(581, 115)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(274, 171)
zoom = Vector2(0.4, 0.4)
limit_smoothed = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="PlayerParty" parent="." instance=ExtResource("4_yktg8")]
position = Vector2(-1, 121)

[node name="EnemyGroup" parent="." instance=ExtResource("5_r5kj3")]
position = Vector2(383, 113)

[node name="EnemySelector" type="Sprite2D" parent="."]
position = Vector2(277, 40)
scale = Vector2(0.085, 0.09)
texture = ExtResource("6_xs7id")
